[fix] docker 이미지 생성, nginx, 서버 연결

--- a/drawingdiary/backend/Dockerfile
+++ b/drawingdiary/backend/Dockerfile
@@ -1,12 +1,14 @@
-FROM node:15.11.0-alpine
-
-RUN mkdir /app
+# Step 1: Build the application using Gradle
+FROM gradle:7.6-jdk17 AS build
 WORKDIR /app
-ENV PATH /app/node_modules/.bin:$PATH
-COPY package.json /app/package.json
+COPY . .
+RUN gradle clean build -x test
 
-RUN npm install --no-cache
-#RUN apk add --no-cache git
+# 빌드 결과 확인 (추가)
+RUN ls -l /app/build/libs
 
-COPY . /app
-CMD ["npm", "run", "server"]
+# Step 2: Run the application using JDK 17
+FROM openjdk:17-jdk-slim
+WORKDIR /app
+COPY --from=build /app/build/libs/drawingdiary-0.0.1-SNAPSHOT.jar /app/app.jar
+ENTRYPOINT ["java", "-jar", "/app/app.jar"]
