--- a/drawingdiary/nginx/nginx.conf
+++ b/drawingdiary/nginx/nginx.conf
@@ -9,7 +9,7 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
     upstream docker-server {
-        server server:8080; #TODO: 나 이걸 스프링부트로 옮겨야함 server:8080으로 server는 도메인이나 호스트이름
+        server server:8080;  # 'server'는 Docker Compose의 서비스 이름
     }
     server {
         listen 80;
