--- a/drawingdiary/docker-compose.yml
+++ b/drawingdiary/docker-compose.yml
@@ -15,22 +15,28 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./frontend/build:/usr/share/nginx/html
+    depends_on:
+      - server
+    networks:
+      - default
 
   server:
     build:
       context: ./backend/
+      dockerfile: Dockerfile
     container_name: server
     restart: "on-failure"
-    expose:
-      - 8080
-    volumes:
-      - './backend:/app'
-      - '/app/node_modules'
+    ports:
+      - "8080:8080"
     environment:
-      - NODE_ENV=development
-      - CHOKIDAR_USEPOLLING=true
+      - SPRING_PROFILES_ACTIVE=development
     stdin_open: true
+    depends_on:
+      - db
+      - redis
     tty: true
+    networks:
+      - default
 
   db:
     image: mysql:8.4.2
@@ -57,13 +63,14 @@ services:
       - "6379:6379"
     environment:
       - REDIS_PASSWORD=${REDIS_PASSWORD}
-    command: redis-server --requirepass $$REDIS_PASSWORD
+    command: redis-server --requirepass ${REDIS_PASSWORD}
     restart: always
-    expose:
-      - 6379
     volumes:
       - ./redis/data:/data
-      - ./redis/conf/redis.conf:/usr/local/conf/redis.conf
+      - ./redis/conf/redis.conf:/usr/local/etc/redis/redis.conf
+    networks:
+      - default
+
 
   generate_image:
     build:
@@ -80,6 +87,8 @@ services:
       FLASK_ENV: development
       FLASK_APP: app.py
     command: flask run --host=0.0.0.0 --port=5000
+    networks:
+      - default
 
 
   recommender:
@@ -95,3 +104,10 @@ services:
       FLASK_ENV: development
       FLASK_APP: recommender.py
     command: flask run --host=0.0.0.0 --port=5001
+    networks:
+      - default
+
+
+networks:
+  default:
+    driver: bridge
