[fix] recommender 연결

--- a/drawingdiary/nginx/nginx.conf
+++ b/drawingdiary/nginx/nginx.conf
@@ -11,6 +11,9 @@ http {
     upstream docker-server {
         server server:8080;  # 'server'는 Docker Compose의 서비스 이름
     }
+    upstream recommender-server {
+        server recommender:5001;  # 'recommender' 는 추천 flask 서버의 서비스 이름
+    }
     server {
         listen 80;
         server_name localhost;
@@ -27,6 +30,23 @@ http {
             proxy_set_header   X-Real-IP $remote_addr;
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
         }
+
+        location /api/get-styles {
+            proxy_pass http://recommender-server;  # Flask로 요청을 전달
+            proxy_redirect off;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        location /api/get-styles-history {
+            proxy_pass http://recommender-server;  # Flask로 요청을 전달
+            proxy_redirect off;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+        
         location /socket {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
